--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,40 @@
-Flask==2.0.1
-python-telegram-bot==20.0
-beautifulsoup4==4.10.0
-requests==2.26.0
-pymupdf==1.18.19
-chromadb==0.3.21
-openai==0.11.3
-python-dotenv==0.19.2
-lxml==4.6.3
+# Core Bot Framework
+python-telegram-bot==20.7
+
+# AI/ML Framework
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-chroma==0.1.0
+langchain-huggingface==0.0.1
+langchain-core==0.1.0
+
+# AI Models and APIs
+openai==1.3.0
+sentence-transformers==2.2.2
+transformers==4.36.0
+
+# Vector Database
+chromadb==0.4.18
+
+# Document Processing
+pymupdf4llm==0.0.5
+beautifulsoup4==4.12.2
+
+# Web Scraping
+requests==2.31.0
+lxml==4.9.3
+
+# Utilities
+python-dotenv==1.0.0
+pathlib==1.0.1
+numpy==1.24.3
+
+# Search
+rank-bm25==0.2.2
+
+# Optional: GPU Support
+torch==2.1.0
+
+# Development
+pytest==7.4.0
+black==23.9.0
